# podcast

./: .gitignore  Cargo.toml
src/: dir.rs  lib.rs  macros.rs  main.rs  player.rs  ui.rs
src/player/: backend.rs  cmd.rs  state.rs
src/ui/: episodes_tab.rs  feed_tab.rs  interface.rs  log.rs  macros.rs  player_tab.rs  ui.rs
