[package]
name = "podaemon"
version = "0.1.0"
authors = ["johnli360 <johnli@student.chalmers.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "*"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "*"
crossterm = "*"
strum = "0.11.0"
strum_macros = "0.11.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json ="1.0"

