[package]
name = "podaemon"
version = "0.1.0"
authors = ["johnli360 <johnli@student.chalmers.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.18.8"
tui = { version = "0.19.0", default-features= false, features = ['crossterm'] }
tokio = { version = "1.17.0", features = [ "full", "tracing" ] }
crossterm = "0.25"
strum = "0.11.0"
strum_macros = "0.11.0"
rss = "2.0.1"
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
serde_json ="1.0"
futures = "0.3.21"
rayon = "1.5.3"
console-subscriber = "0.1.8"
chrono = "0.4.22"
tokio-stream = "0.1.9"
